# fruity

./: .env.example  Cargo.toml  LICENSE  README.md
src/: events.rs  main.rs
