[package]
name = "fruitybot"
version = "0.1.0"
authors = ["Aidan Sanders <aidan.sanders1316@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }